Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10717

Assertion `!null_value' failed in virtual bool Item::send(Protocol*, String*)

    XMLWordPrintable

Details

    • 10.1.20

    Description

      mysqld: /data/src/5.5/sql/item.cc:6542: virtual bool Item::send(Protocol*, String*): Assertion `!null_value' failed.
      160901 13:41:56 [ERROR] mysqld got signal 6 ;
      

      #7  0x00007f2f83d5e312 in __GI___assert_fail (assertion=0xdaeed1 "!null_value", file=0xdae667 "/data/src/5.5/sql/item.cc", line=6542, function=0xdb0d40 <Item::send(Protocol*, String*)::__PRETTY_FUNCTION__> "virtual bool Item::send(Protocol*, String*)") at assert.c:101
      #8  0x00000000007cfaca in Item::send (this=0x7f2f7e948270, protocol=0x7f2f7fa74628, buffer=0x7f2f85db4140) at /data/src/5.5/sql/item.cc:6542
      #9  0x0000000000568e90 in Protocol::send_result_set_row (this=0x7f2f7fa74628, row_items=0x7f2f7fa77b88) at /data/src/5.5/sql/protocol.cc:903
      #10 0x00000000005cb510 in select_send::send_data (this=0x7f2f7e948a40, items=...) at /data/src/5.5/sql/sql_class.cc:2374
      #11 0x000000000065de21 in end_send (join=0x7f2f7e948a60, join_tab=0x7f2f7e949cc0, end_of_records=false) at /data/src/5.5/sql/sql_select.cc:18090
      #12 0x000000000065bbbd in evaluate_join_record (join=0x7f2f7e948a60, join_tab=0x7f2f7e9499a0, error=0) at /data/src/5.5/sql/sql_select.cc:17186
      #13 0x000000000065b6b1 in sub_select (join=0x7f2f7e948a60, join_tab=0x7f2f7e9499a0, end_of_records=false) at /data/src/5.5/sql/sql_select.cc:17006
      #14 0x000000000065ad8b in do_select (join=0x7f2f7e948a60, fields=0x7f2f7fa77b88, table=0x0, procedure=0x0) at /data/src/5.5/sql/sql_select.cc:16629
      #15 0x00000000006395e9 in JOIN::exec (this=0x7f2f7e948a60) at /data/src/5.5/sql/sql_select.cc:2873
      #16 0x0000000000639db4 in mysql_select (thd=0x7f2f7fa74060, rref_pointer_array=0x7f2f7fa77ce0, tables=0x7f2f7e9483b8, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f2f7e948a40, unit=0x7f2f7fa77390, select_lex=0x7f2f7fa77a70) at /data/src/5.5/sql/sql_select.cc:3094
      #17 0x000000000063069a in handle_select (thd=0x7f2f7fa74060, lex=0x7f2f7fa772e0, result=0x7f2f7e948a40, setup_tables_done_option=0) at /data/src/5.5/sql/sql_select.cc:319
      #18 0x0000000000609b9d in execute_sqlcom_select (thd=0x7f2f7fa74060, all_tables=0x7f2f7e9483b8) at /data/src/5.5/sql/sql_parse.cc:4689
      #19 0x0000000000602eee in mysql_execute_command (thd=0x7f2f7fa74060) at /data/src/5.5/sql/sql_parse.cc:2234
      #20 0x000000000060c768 in mysql_parse (thd=0x7f2f7fa74060, rawbuf=0x7f2f7e948078 "SELECT CHAR(i USING utf8) FROM t1", length=33, parser_state=0x7f2f85db5650) at /data/src/5.5/sql/sql_parse.cc:5934
      #21 0x000000000060047d in dispatch_command (command=COM_QUERY, thd=0x7f2f7fa74060, packet=0x7f2f8074e061 "", packet_length=33) at /data/src/5.5/sql/sql_parse.cc:1079
      #22 0x00000000005ff637 in do_command (thd=0x7f2f7fa74060) at /data/src/5.5/sql/sql_parse.cc:793
      #23 0x00000000007018a3 in do_handle_one_connection (thd_arg=0x7f2f7fa74060) at /data/src/5.5/sql/sql_connect.cc:1270
      #24 0x0000000000701630 in handle_one_connection (arg=0x7f2f7fa74060) at /data/src/5.5/sql/sql_connect.cc:1186
      #25 0x0000000000943ad7 in pfs_spawn_thread (arg=0x7f2f8077a300) at /data/src/5.5/storage/perfschema/pfs.cc:1015
      #26 0x00007f2f859f20a4 in start_thread (arg=0x7f2f85db6700) at pthread_create.c:309
      #27 0x00007f2f83e1887d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

      CREATE TABLE t1 (i INT, KEY(i)) ENGINE=MyISAM;
      INSERT INTO t1 VALUES (20081205),(20050327);
      SET sql_mode='STRICT_ALL_TABLES';
       
      SELECT CHAR(i USING utf8) FROM t1;
      

      Attachments

        Activity

          People

            bar Alexander Barkov
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.