MDEV-10717 Assertion `!null_value' failed in virtual bool Item::send(Protocol*, String*)

The problem was that null_value was not set to "false" on a well-formed row.
If an ill-formed row was followed by a well-forned row, null_value remained
"true" in the call of Item::send() for the well-formed row.